# obs-plugins

./: .gitignore  CMakeLists.txt  CONTRIBUTING
libobs/: CMakeLists.txt  obs-avc.c  obs-config.h  obs-display.c  obs-encoder.c  obs-internal.h  obs-module.c  obs-module.h  obs-output-delay.c  obs-output.c  obs-output.h  obs-properties.c  obs-properties.h  obs-scene.c  obs-service.c  obs-source.c  obs-source.h  obs-video.c  obs.c  (+4 more)
libobs-d3d11/: CMakeLists.txt  d3d11-duplicator.cpp  d3d11-indexbuffer.cpp  d3d11-samplerstate.cpp  d3d11-shader.cpp  d3d11-shaderprocessor.cpp  d3d11-shaderprocessor.hpp  d3d11-stagesurf.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp  d3d11-texture2d.cpp  d3d11-vertexbuffer.cpp  d3d11-zstencilbuffer.cpp
libobs-opengl/: gl-subsystem.c  gl-x11.c
plugins/boom-capture/: CMakeLists.txt  boom-universal.c  cursor-capture.h  game-capture.c  graphics-hook-info.h  load-graphics-offsets.c  plugin-main.c  vr-window-capture.c  window-capture.c  window-helpers.c  window-helpers.h
plugins/boom-capture/data/locale/: cs-CZ.ini  en-US.ini  es-ES.ini  eu-ES.ini  fi-FI.ini  fr-FR.ini  nl-NL.ini  pl-PL.ini  ru-RU.ini  sk-SK.ini  sr-SP.ini  zh-TW.ini
plugins/boom-capture/get-graphics-offsets/: CMakeLists.txt  d3d8-offsets.cpp  d3d9-offsets.cpp  dxgi-offsets.cpp  get-graphics-offsets.c
plugins/boom-capture/graphics-hook/: CMakeLists.txt  d3d10-capture.cpp  d3d11-capture.cpp  d3d8-capture.cpp  d3d9-capture.cpp  d3d9-patches.hpp  dxgi-capture.cpp  gl-capture.c  graphics-hook.c  graphics-hook.h
plugins/boom-capture/inject-helper/: CMakeLists.txt  inject-helper.c
(+369 files in other folders)
